--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -27,8 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:background="#789C63"
+        android:layout_marginBottom="@dimen/xxlarge_dimen"
+        android:layout_marginEnd="@dimen/normal_dimen"
+        android:background="@color/green0"
         app:srcCompat="@drawable/add_icon"
         tools:ignore="VectorDrawableCompat" />
 
