--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00363a</color>
     <color name="colorAccent">#4caf50</color>
     <color name="colorFloatingButton">#00e676</color>
+    <color name="green0">#789C63</color>
 </resources>
