--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,15 @@
     <color name="colorAccent">#4caf50</color>
     <color name="colorFloatingButton">#00e676</color>
     <color name="green0">#789C63</color>
+    <color name="gray0">#999999</color>
+    <color name="green1">#437E23</color>
+    <color name="green2">#549e2d</color>
+    <color name="gray1">#E8E8E8</color>
+    <color name="gray2">#ababab</color>
+    <color name="gray3">#707070</color>
+    <color name="gay4">#AAAAAA</color>
+
+    <color name="blue0">#4981bd</color>
+    <color name="blue1">#3A6797</color>
+    <color name="blue2">#4e84bf</color>
 </resources>
