--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -22,16 +22,21 @@
         rfal:rfal_frame_alpha="0.7"
         rfal:rfal_frame_color="@android:color/white">
 
-        <TextView
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:lineSpacingMultiplier="1.3"-->
+            <!--android:padding="@dimen/large_dimen"-->
+            <!--android:text="@string/example"-->
+            <!--android:textSize="16sp" />-->
+
+        <FrameLayout
+            android:id="@+id/fl_float_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:gravity="center_vertical"
-            android:lineSpacingMultiplier="1.3"
-            android:padding="@dimen/large_dimen"
-            android:text="@string/example"
-            android:textSize="16sp" />
+            android:layout_height="match_parent"/>
 
 
         <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionButton xmlns:rfab="http://schemas.android.com/apk/res-auto"
