--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <FrameLayout
-            android:id="@+id/fl_content"
+            android:id="@+id/fl_drawer_content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"/>
