--- a/app/src/main/res/layout/activity_project_create.xml
+++ b/app/src/main/res/layout/activity_project_create.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container_project_create"
     android:orientation="vertical">
 
     <include
@@ -19,15 +20,16 @@
         android:hint="@string/title"
         android:padding="@dimen/medium_dimen" />
 
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_btn_desc"
+        android:background="@null"
+        android:id="@+id/etProjectDescription"
         android:paddingBottom="@dimen/medium_dimen"
         android:paddingEnd="@dimen/medium_dimen"
         android:paddingStart="@dimen/medium_dimen"
         android:paddingTop="@dimen/normal_dimen"
-        android:text="@string/tap_to_add_description" />
+        android:hint="@string/tap_to_add_description" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,19 +53,37 @@
             app:pileWidth="10dp" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_date"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/tv_start_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:drawablePadding="@dimen/medium_dimen"
         android:drawableStart="@drawable/ic_date"
         android:gravity="center_vertical"
         android:paddingBottom="@dimen/medium_dimen"
         android:paddingStart="@dimen/medium_dimen"
         android:paddingTop="@dimen/normal_dimen"
-        android:text="@string/set_date" />
+        android:text="@string/set_start_date" />
+        <TextView
+            android:id="@+id/tv_end_date"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawablePadding="@dimen/medium_dimen"
+            android:drawableStart="@drawable/ic_date"
+            android:gravity="center_vertical"
+            android:paddingBottom="@dimen/medium_dimen"
+            android:paddingStart="@dimen/medium_dimen"
+            android:paddingTop="@dimen/normal_dimen"
+            android:text="@string/set_end_date" />
 
+    </LinearLayout>
     <TextView
         android:id="@+id/tv_workflow"
         android:layout_width="match_parent"
@@ -83,7 +103,7 @@
 
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_task"
+        android:id="@+id/fab_create_project"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
@@ -95,6 +115,7 @@
         app:backgroundTintMode="src_atop"
         app:borderWidth="3dp"
         app:elevation="5dp"
+        android:onClick="createProject"
         app:fabSize="normal"
         app:rippleColor="@android:color/holo_blue_light"
         app:useCompatPadding="true" />
