--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,64 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    android:background="@android:color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     >
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/firstname_text_input_layout"
-        android:layout_width="match_parent"
+        android:id="@+id/first_name_text_input_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         >
-        <EditText
-            android:id="@+id/firstTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/edittxt_corner"
-            android:ems="10"
-            android:hint="firstname"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:text="" />
+
+
+    <EditText
+        android:id="@+id/firstTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:ems="10"
+        android:hint="firstname"
+        android:inputType="textPersonName"
+        android:padding="10dp"
+        android:text="" />
     </android.support.design.widget.TextInputLayout>
+
+
 
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/lastname_text_input_layout"
-        android:layout_width="match_parent"
+        android:id="@+id/last_name_text_input_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/lastnameTxt"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        >
-        <EditText
-            android:id="@+id/lastnameTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/edittxt_corner"
-            android:ems="10"
-            android:hint="lastname"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:text="" />
+        android:layout_gravity="center"
+        android:ems="10"
+        android:hint="lastname"
+        android:inputType="textPersonName"
+        android:padding="10dp"
+        android:text="" />
     </android.support.design.widget.TextInputLayout>
+
 
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/mobile_text_input_layout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        >
+       >
         <EditText
             android:id="@+id/mobileTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/edittxt_corner"
             android:ems="10"
             android:hint="mobile"
             android:inputType="textPersonName"
@@ -69,9 +71,8 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/password_text_input_layout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         >
         <EditText
             android:id="@+id/passwordTxt"
@@ -80,7 +81,7 @@
             android:layout_gravity="center"
             android:padding="10dp"
             android:layout_marginTop="28dp"
-            android:background="@drawable/edittxt_corner"
+
             android:ems="10"
             android:hint="password"
             android:inputType="textPersonName"
@@ -90,9 +91,9 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/companysize_text_input_layout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+     >
         <EditText
             android:layout_gravity="center"
             android:id="@+id/companysizeTxt"
@@ -100,7 +101,6 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_marginTop="19dp"
-            android:background="@drawable/edittxt_corner"
             android:ems="10"
             android:hint="company size"
             android:inputType="textPersonName"
@@ -110,9 +110,9 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/email_text_input_layout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+  >
         <EditText
             android:id="@+id/emailTxt"
             android:layout_gravity="center"
@@ -120,7 +120,6 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_marginTop="29dp"
-            android:background="@drawable/edittxt_corner"
             android:ems="10"
             android:hint="email"
             android:inputType="textPersonName"
@@ -130,11 +129,12 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="221dp"
+        android:layout_height="34dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"/>
+        android:entries="@array/roles" />
 
     <Button
         android:id="@+id/signupbtn"
@@ -146,3 +146,4 @@
         android:text="sign up"
         android:textColor="#ffffff" />
 </LinearLayout>
+</ScrollView>
