Task Create Screen update

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="blue0">#4981bd</color>
     <color name="blue1">#3A6797</color>
     <color name="blue2">#4e84bf</color>
+    <color name="sbRed">#ef5350</color>
 </resources>
