--- a/app/src/main/res/layout/activity_task_create.xml
+++ b/app/src/main/res/layout/activity_task_create.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/task_create_container"
     android:orientation="vertical">
 
     <include
@@ -19,26 +20,48 @@
         android:hint="@string/title"
         android:padding="@dimen/medium_dimen" />
 
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/edt_task_description"
         android:background="@drawable/shape_btn_desc"
         android:paddingBottom="@dimen/medium_dimen"
         android:paddingEnd="@dimen/medium_dimen"
         android:paddingStart="@dimen/medium_dimen"
         android:paddingTop="@dimen/normal_dimen"
-        android:text="@string/tap_to_add_description" />
+        android:hint="@string/tap_to_add_description" />
 
-    <TextView
-        android:id="@+id/tv_date"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_date"
-        android:gravity="center_vertical"
-        android:layout_marginTop="@dimen/normal_dimen"
-        android:drawablePadding="@dimen/medium_dimen"
-        android:padding="@dimen/medium_dimen"
-        android:text="@string/set_date" />
+        android:weightSum="2"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_task_start_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawablePadding="@dimen/medium_dimen"
+            android:drawableStart="@drawable/ic_date"
+            android:gravity="center_vertical"
+            android:paddingBottom="@dimen/medium_dimen"
+            android:paddingStart="@dimen/medium_dimen"
+            android:paddingTop="@dimen/normal_dimen"
+            android:text="@string/set_start_date" />
+        <TextView
+            android:id="@+id/tv_task_end_date"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawablePadding="@dimen/medium_dimen"
+            android:drawableStart="@drawable/ic_date"
+            android:gravity="center_vertical"
+            android:paddingBottom="@dimen/medium_dimen"
+            android:paddingStart="@dimen/medium_dimen"
+            android:paddingTop="@dimen/normal_dimen"
+            android:text="@string/set_end_date" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/add_assignee"
+            android:onClick="addAssignee"
             android:drawableLeft="@drawable/ic_right"
             android:gravity="center_vertical"
             android:layout_marginEnd="@dimen/xxlarge_dimen"/>
@@ -123,6 +147,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="10dp"
         android:clickable="true"
+        android:onClick="createTask"
         android:src="@drawable/ic_correct"
         app:backgroundTint="@color/gay4"
         app:backgroundTintMode="src_atop"
