--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="medium_dimen">20dp</dimen>
     <dimen name="feng_small_dimen">5dp</dimen>
     <dimen name="task_txt_size">20sp</dimen>
+    <dimen name="date_txt_size">10sp</dimen>
+    <dimen name="twof_dimen">25dp</dimen>
 </resources>
