Task Edit/Update Part Done

--- a/app/src/main/res/layout/project_list_fragment.xml
+++ b/app/src/main/res/layout/project_list_fragment.xml
@@ -6,7 +6,8 @@
 
     <ListView
         android:id="@+id/projectList"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
         android:textAlignment="center"/>
 </LinearLayout>
