--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="blue1">#3A6797</color>
     <color name="blue2">#4e84bf</color>
     <color name="sbRed">#ef5350</color>
+    <color name="feng_gray4">#6d6d6d</color>
 </resources>
