--- a/app/src/main/res/layout/activity_task_create.xml
+++ b/app/src/main/res/layout/activity_task_create.xml
@@ -26,8 +26,8 @@
         android:id="@+id/edt_task_description"
         android:background="@drawable/shape_btn_desc"
         android:paddingBottom="@dimen/medium_dimen"
-        android:paddingEnd="@dimen/medium_dimen"
-        android:paddingStart="@dimen/medium_dimen"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:paddingTop="@dimen/normal_dimen"
         android:hint="@string/tap_to_add_description" />
 
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/tv_task_start_date"
