--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -28,9 +28,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_task_status"
+                android:id="@+id/tv_task_status_task_list"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="15dp"
@@ -49,7 +49,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="15dp"
-                android:text="timeline"
+                android:text="Due Date"
                 android:textStyle="bold" />
         </LinearLayout>
 
