--- a/app/src/main/res/layout/project_list_item_format.xml
+++ b/app/src/main/res/layout/project_list_item_format.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
-
+    android:layout_height="60dp"
+    android:layout_margin="5dp">
+<View
+    android:layout_width="match_parent"
+    android:layout_height="0.1dp"
+    android:background="#000000"/>
     <TextView
         android:id="@+id/tvTitle"
         android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="30dp"
         android:layout_weight="1"
-        android:textAlignment="center"
+        android:foregroundGravity="left"
         android:gravity="center_vertical"
-        android:textSize="24sp"
+        android:textSize="15sp"
         android:text="TextView"
         android:textStyle="bold"/>
-</LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="#000000"/>
+
+</android.support.v7.widget.CardView>
