--- a/app/src/main/res/layout/layout_project_detail.xml
+++ b/app/src/main/res/layout/layout_project_detail.xml
@@ -50,6 +50,7 @@
                 android:background="@color/gray2" />
 
             <LinearLayout
+                android:id="@+id/ll_member"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/normal_dimen"
@@ -64,10 +65,9 @@
 
                 <b12app.vyom.com.utils.MyFlowlayout
                     android:id="@+id/layout_detail_flow"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
                     app:pileWidth="10dp" />
 
                 <ImageButton
