--- a/app/src/main/res/layout/layout_task_detail.xml
+++ b/app/src/main/res/layout/layout_task_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/task_edit_container"
     tools:context=".home.HomeActivity">
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
