Assign task member, update firebase db, global String

--- a/app/src/main/res/layout/layout_task_detail.xml
+++ b/app/src/main/res/layout/layout_task_detail.xml
@@ -48,6 +48,7 @@
             android:background="@color/gray2" />
 
         <LinearLayout
+            android:id="@+id/ll_task_member"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/normal_dimen"
