--- a/app/src/main/res/layout/employee_list_item_format.xml
+++ b/app/src/main/res/layout/employee_list_item_format.xml
@@ -1,58 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:layout_marginTop="5dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/small_padding">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/designation_text"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:textSize="25sp"
-            android:id="@+id/designation_text"
             android:background="@drawable/layout_border"
-            android:text="DEV"/>
+            android:gravity="center_vertical|center_horizontal"
+            android:text="DEV"
+            android:textSize="20sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_height="75dp"
+            android:paddingStart="@dimen/small_padding"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/emp_name"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:textStyle="bold"
-                android:paddingLeft="5dp"
-                android:drawablePadding="15dp"
-                android:paddingRight="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:textSize="24sp"
+                android:paddingEnd="@dimen/small_padding"
+                android:text="Vyom Patel"
+                android:paddingTop="@dimen/small_padding"
+                android:paddingBottom="@dimen/small_padding"
                 android:textColor="@color/blue1"
-                android:text="Vyom Patel" />
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:id="@+id/emp_mobile"
-                    android:text="Mobile: 7325078484"/>
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/emp_email"
+                    android:gravity="center_vertical"
                     android:layout_weight="1"
-                    android:text="Email: vyomhpatel@gmail.com"/>
+                    android:textSize="12sp"
+                    android:text="Mobile: 7325078484" />
+
+                <TextView
+                    android:id="@+id/emp_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:textSize="12sp"
+                    android:text="Email: vyomhpatel@gmail.com" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
